syntax = "proto3";

option go_package = "github.com/IvanVojnic/bandEFuser/proto";

package user;

service user {
  rpc GetFriends(GetFriendsRequest) returns (GetFriendsResponse){}
  rpc SendFriendRequest(SendFriendRequestReq) returns (SendFriendRequestResp){}
  rpc AcceptFriendsRequest(AcceptFriendsRequestReq) returns (AcceptFriendsRequestResp){}
  rpc DeclineFriendsRequest(DeclineFriendsRequestReq) returns (DeclineFriendsRequestResp){}
  rpc FindUser(FindUserRequest) returns (FindUserResponse){}
  rpc GetRequest(GetRequestReq) returns (GetRequestResp){}
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse){}
}

message GetFriendsRequest {
  string userID = 1;
}

message GetFriendsResponse {
  repeated User friends = 1;
}

message User {
  string ID = 1;
  string name = 2;
  string email = 3;
}

message SendFriendRequestReq{
  string userID = 1;
  string receiverID = 2;
}

message SendFriendRequestResp{

}

message AcceptFriendsRequestReq{
  string userSenderID = 1;
  string userID = 2;
}

message AcceptFriendsRequestResp{

}

message DeclineFriendsRequestReq{
  string userSenderID = 1;
  string userID = 2;
}

message DeclineFriendsRequestResp{

}

message FindUserRequest{
  string userEmail = 1;
}

message FindUserResponse{
  User friend = 1;
}

message GetRequestReq{
  string userID = 1;
}

message GetRequestResp{
  repeated User users = 1;
}

message GetUsersRequest{
  repeated string usersID = 1;
}

message GetUsersResponse{
  repeated User users = 1;
}
